--- a/releng/server-all/src/main/webapp/login-error.html
+++ b/releng/server-all/src/main/webapp/login-error.html
@@ -9,7 +9,7 @@
   ~ SAP - initial API and implementation
   -->
 
-<html>
+<html ng-app="login">
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,7 @@
 	<link rel="shortcut icon" type="image/png" href="../../../../services/v3/web/resources/images/favicon.png" />
 	<link rel="stylesheet" href="../../../../services/v3/web/resources/font-dirigible/font.css">
 </head>
-    <body>
+    <body ng-controller="LoginController">
         <div class="container" style="padding: 5em">
 			<div class="row col-sm-6 col-md-4 col-md-offset-4">
 				<h1 style="font-size: 3.5em; margin-bottom: 0.8em" align="center"><i class="logo-icon icon-dirigible">&#xe801;</i></h1>
@@ -33,16 +33,38 @@
 						<strong>Invalid username and/or password!</strong>
 					</div>
 					<div>
-						<form class="form-signin" name="loginForm" method="POST" action="j_security_check">
-						<input type="text" name="j_username" class="form-control" style="margin-top: 1em; padding: 1em" placeholder="Username" required autofocus>
-						<input type="password" name="j_password" class="form-control" style="margin-top: 1em; padding: 1em" placeholder="Password" required>
-						<button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 1em">Log in</button>
-						<hr>
-						<a href="///www.dirigible.io" target="_blank" class="pull-right need-help">Need help?</a><span class="clearfix"></span>
+						<form class="form-signin" name="loginForm">
+							<input type="text" ng-model="j_username" class="form-control" style="margin-top: 1em; padding: 1em" placeholder="Username" required autofocus>
+							<input type="password" ng-model="j_password" class="form-control" style="margin-top: 1em; padding: 1em" placeholder="Password" required>
+							<button ng-click="login()" class="btn btn-lg btn-primary btn-block" type="button" style="margin-top: 1em">Log in</button>
+							<hr>
+							<a href="///www.dirigible.io" target="_blank" class="pull-right need-help">Need help?</a><span class="clearfix"></span>
 						</form>
 					</div>
 				</div>
 			</div>
 		</div>
+
+		<script type="text/javascript" src="../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+		<script>
+			angular.module('login', []);
+			angular.module('login')
+			.controller('LoginController', function ($scope, $http) {
+				var api = 'j_security_check';
+
+				$scope.login = function() {
+					var xhr = new XMLHttpRequest();
+					xhr.open('POST', api, true);
+					xhr.onload = function () {
+						if (xhr.responseURL) {
+							window.location.href = xhr.responseURL;
+						}
+					};
+					xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+					xhr.setRequestHeader('X-Requested-With', 'Fetch');
+					xhr.send('j_username=' + $scope.j_username + '&j_password=' + $scope.j_password);
+				};
+			});
+		</script>
     </body>
 </html>
