--- a/ide/ui/ide-git/src/main/resources/ide-git/index.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/index.html
@@ -102,6 +102,13 @@
 		}]);
 	</script>
 	
+	<script language="JavaScript">
+	    window.addEventListener('beforeunload', function (e) {
+		  e.preventDefault();
+		  e.returnValue = '';
+		});
+	</script>
+	
 </body>
 
 </html>
