--- a/ide/ui/ide-operations/src/main/resources/ide-operations/index.html
+++ b/ide/ui/ide-operations/src/main/resources/ide-operations/index.html
@@ -81,5 +81,13 @@
 					
 		}]);
 	</script>
+	
+	<script language="JavaScript">
+	    window.addEventListener('beforeunload', function (e) {
+		  e.preventDefault();
+		  e.returnValue = '';
+		});
+	</script>
+	
 </body>
 
