--- a/ide/ui/ide-workbench/src/main/resources/ide/index.html
+++ b/ide/ui/ide-workbench/src/main/resources/ide/index.html
@@ -101,6 +101,13 @@
 		}]);
 	</script>
 	
+	<script language="JavaScript">
+	    window.addEventListener('beforeunload', function (e) {
+		  e.preventDefault();
+		  e.returnValue = '';
+		});
+	</script>
+	
 </body>
 
 </html>
