--- a/ide/ui/ide-core/src/main/resources/ide-core/ui/tmpl/menu.html
+++ b/ide/ui/ide-core/src/main/resources/ide-core/ui/tmpl/menu.html
@@ -33,12 +33,7 @@
 			  <li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes <b class="caret"></b></a>
 				<ul class="dropdown-menu">
-					<li><a href="#" data-theme="default" class="theme-link" ng-click="selectTheme('default')">Default</a></li>
-					<li><a href="#" data-theme="wendy" class="theme-link" ng-click="selectTheme('wendy')">Wendy</a></li>
-					<li><a href="#" data-theme="baroness" class="theme-link" ng-click="selectTheme('baroness')">Baroness</a></li>
-					<li><a href="#" data-theme="simone" class="theme-link" ng-click="selectTheme('simone')">Simone</a></li>
-					<li><a href="#" data-theme="alice" class="theme-link" ng-click="selectTheme('alice')">Alice</a></li>
-					<li><a href="#" data-theme="florence" class="theme-link" ng-click="selectTheme('florence')">Florence</a></li>
+					<li ng-repeat="next in themes"><a href="#" data-theme="{{next.id}}" class="theme-link" ng-click="selectTheme(next.id)">{{next.name}}</a></li>
 				</ul>
 			  </li>
 			  <li class="hidden-xs">
