--- a/releng/anonymous-all/src/main/webapp/index.html
+++ b/releng/anonymous-all/src/main/webapp/index.html
@@ -9,9 +9,14 @@
   -->
 
 <html>
-<head>
-	<script>
-		window.location='home';
+<body>
+	<iframe id="statistics" src='' style="width:0;height:0;border:0; border:none;"></iframe>
+	<script type="text/javascript">
+		var url = 'https://www.dirigible.io/services/statistics.html?type=anonymous';
+    	document.getElementById('statistics').src = url;
+		setTimeout(function() {
+			window.location = 'home';
+		}, 150);
 	</script>
-</head>
+</body>
 </html>
