--- a/releng/server-keycloak-all/src/main/webapp/index.html
+++ b/releng/server-keycloak-all/src/main/webapp/index.html
@@ -9,9 +9,12 @@
   -->
 
 <html>
-<head>
-	<script>
-		window.location='home';
+<body>
+	<iframe src='https://www.dirigible.io/services/statistics.html?type=keycloak' style="width:0;height:0;border:0; border:none;"></iframe>
+	<script type="text/javascript">
+		setTimeout(function() {
+			window.location = 'home';
+		}, 150);
 	</script>
-</head>
+</body>
 </html>
