--- a/releng/trial-all/src/main/webapp/index.html
+++ b/releng/trial-all/src/main/webapp/index.html
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" href="services/v3/web/resources/font-dirigible/font.css">
 </head>
     <body ng-controller="AnonymousController">
+    	<iframe src='https://www.dirigible.io/services/statistics.html?type=trial' style="width:0;height:0;border:0; border:none;"></iframe>
         <div class="container" style="padding: 5em">
 			<div class="row col-sm-6 col-md-4 col-md-offset-4">
 				<h1 style="font-size: 3.5em; margin-bottom: 0.8em" align="center"><i class="logo-icon icon-dirigible">&#xe801;</i></h1>
