--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -70,9 +70,17 @@
 			<button type="button" id="generateFromModel" ng-show=false data-toggle="modal" data-target="#dialogGenerateFromModel"></button>
 			<button type="button" id="uploadFile" ng-show=false data-toggle="modal" data-target="#dialogUploadFile"></button>
 			
-
-			<button type="button" class="btn btn-default btn-top" title="Create Project" ng-click="workspace.createProject()"><i class="fa fa-plus"></i></button>
-			<button type="button" class="btn btn-default btn-top" title="Link Project" ng-click="workspace.linkProject()"><i class="fa fa-link"></i></button>
+			<div class="btn btn-top dropdown" style="padding: 0px">
+				<div class="btn btn-default btn-top dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<i class="fa fa-plus"></i>
+				</div>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<div><a class="dropdown-item" title="Create Project" ng-click="workspace.createProject()">Create Project</a></div>
+					<div><a class="dropdown-item" title="Link Project" ng-click="workspace.linkProject()">Link Project</a></div>
+					<div><a class="dropdown-item" title="Create Workspace" ng-click="workspace.createWorkspace()">Create Workspace</a></div>
+				</div>
+			</div>
+			
 
 			<button type="button" class="btn btn-default btn-top" title="Save All" ng-click="workspace.saveAll()"><i class="fa fa-floppy-o"></i></button>
 			<button type="button" class="btn btn-default btn-top" title="Publish All" ng-click="workspace.publish()"><i class="fa fa-cloud-upload"></i></button>
@@ -80,7 +88,7 @@
 			
 			<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="workspace.refresh()"><i class="fa fa-refresh"></i></button>
 			
-			<button type="button" class="btn btn-default btn-top" title="Create Workspace" ng-click="workspace.createWorkspace()"><i class="fa fa-server"></i></button>
+			
 			<select ng-model="workspace.selectedWorkspace" ng-options="o as o for o in workspace.workspaces" ng-change="workspace.workspaceSelected()"
 				class="dropdown btn btn-default dropdown-toggle dropdown-top" title="Workspaces"></select>
 			
