--- a/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
@@ -52,7 +52,7 @@
 	  <div class="btn-toolbar-top">
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
 		
-			<button type="button" class="btn btn-default btn-top" title="Clone Project" data-toggle="modal" data-target="#dialogClone"><i class="fa fa-plus"></i></button>
+			<button type="button" class="btn btn-default btn-top" title="Clone Project" data-toggle="modal" data-target="#dialogClone"><i class="fa fa-clone"></i></button>
 			
 			<button id="pullAll" type="button" class="btn btn-default btn-top" title="Pull All Projects" data-toggle="modal" data-target="#dialogPullAll"><i class="fa fa-download"></i></button>
 			<button id="pushAll" type="button" class="btn btn-default btn-top" title="Push All Projects" data-toggle="modal" data-target="#dialogPushAll"><i class="fa fa-upload"></i></button>
