--- a/ide/ui/ide-core/src/main/resources/ide-core/ui/tmpl/sidebar.html
+++ b/ide/ui/ide-core/src/main/resources/ide-core/ui/tmpl/sidebar.html
@@ -1,3 +1,13 @@
-<div class="sidebar list-group">
-	<a class="list-group-item" ng-repeat="perspective in perspectives" ng-class="{active: perspective.name===active}" title="{{perspective.name}}" href="{{perspective.link}}" target="_self"><i class="fa fa-{{perspective.image}} fa-2x"></i></a>
+<div class="statusbar row">
+	<div class="col-md-5 statusbar-message pull-left" ng-class="visible: message, invisible: !message">
+		<i class="fa fa-window-maximize" ng-show="message"></i>
+		 {{message}} 
+		<i style="margin-bottom: 2px;" class="btn fa fa-ban" ng-click="cleanStatusMessages()" ng-show="message"></i>
+	</div>
+	<div class="col-md-5 statusbar-error pull-left" ng-class="visible: error, invisible: !error">
+		<i class="fa fa-exclamation-triangle" ng-show="error"></i>
+		 {{error}} 
+		<i style="margin-bottom: 2px;" class="btn fa fa-ban" ng-click="cleanErrorMessages()" ng-show="error"></i>
+	</div>
+	<div class="col-md-2 pull-right">{{caret}}</div>
 </div>
