--- a/ide/ui/ide-core/src/main/resources/ide-core/ui/tmpl/menu.html
+++ b/ide/ui/ide-core/src/main/resources/ide-core/ui/tmpl/menu.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="container-flex">
 		<div class="navbar-header">
-			<p class="navbar-brand" href="#">
+			<a class="navbar-brand" href="{{branding.brandUrl}}" target="_blank">
 					&nbsp;<i class="fa fa-cloud"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{branding.brand}}
- 			</p>
+ 			</a>
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
