--- a/ide/ui/ide-workbench/src/main/resources/ide/about/about.html
+++ b/ide/ui/ide-workbench/src/main/resources/ide/about/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-  ~ Copyright (c) 2010-2020 SAP and others.
+  ~ Copyright (c) 2010-2021 SAP and others.
   ~ All rights reserved. This program and the accompanying materials
   ~ are made available under the terms of the Eclipse Public License v2.0
   ~ which accompanies this distribution, and is available at
@@ -47,7 +47,7 @@
 				<label>Version:</label> <strong class="badge">{{version.productVersion}}</strong>
 			</div>
 			<div class="form-group">
-				<label>Commit Id:</label> <strong class="badge"><a style="color:inherit" href="http://github.com/eclipse/dirigible/commit/{{version.productCommitId}}" target="_blank">{{version.productCommitId}}</a></strong>
+				<label>Commit Id:</label> <strong class="badge"><a style="color:inherit" href="{{version.productRepository}}/commit/{{version.productCommitId}}" target="_blank">{{version.productCommitId}}</a></strong>
 			</div>
 			<div class="form-group">
 				<label>Type:</label> <strong class="badge">{{version.productType}}</strong>
